# canada-postal-code-changes

./: .gitignore  CLAUDE.md  DEPLOY.md  FINDING_UPDATED_FILES.md  LICENSE  PROCESSING_PROGRESS.md  README.md  data-spec.md  pyproject.toml
data/: city_change_rules.json
docs/: index.html
docs/data/: removed.json  summary.json  timeline.json
src/: classifier.py  cli.py  config.py  db.py  differ.py  downloader.py  parser_geocoder.py  parser_geonames.py  parser_nar.py  progress_tracker.py  static_generator.py
src/web/: api.py  app.py
src/web/static/: index.html
src/web/static/css/: styles.css
src/web/static/js/: app.js
static-site/: README.md  index.html
static-site/data/: by_province.json
