[project]
name = "postal-codes"
version = "0.1.0"
description = "Canadian postal code change tracking and visualization"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
keywords = ["postal-codes", "canada", "geography", "data-analysis", "change-tracking"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "pandas>=2.2",
    "pyarrow>=15.0",
    "requests>=2.31",
    "tqdm>=4.66",
    "click>=8.1",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
postal-codes = "src.cli:cli"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
